# otus-rust

./: .gitignore  Cargo.toml  Makefile  README.md
oop-patterns/: Cargo.toml
oop-patterns/src/: composite.rs  decorator.rs  visitor.rs
rust-patterns/: Cargo.toml
rust-patterns/src/: builder.rs  interpret.rs  lib.rs
smart-home/: Cargo.toml
smart-home/src/: errors.rs  house.rs  room.rs
smart-home/src/devices/: device.rs  mod.rs  socket.rs  thermometer.rs
smart-home_async/: Cargo.toml
smart-home_async/src/devices/: mod.rs  socket.rs  thermo.rs
smart-home_ffi/: Cargo.toml  README.md
smart-home_ffi/examples/: ffi_client.rs
smart-home_ffi/src/: lib.rs
smart-home_gui/: Cargo.toml  README.md
smart-home_gui/src/: tcp_client.rs
smart-home_tcp/: Cargo.toml
smart-home_tcp/src/: client.rs  protocol.rs
smart-home_tcp/src/devices/: mod.rs  socket.rs  tcp_device.rs
smart-home_udp/: Cargo.toml  README.md
smart-home_udp/src/: client.rs  lib.rs  protocol.rs
smart-home_udp/src/devices/: mod.rs  thermometer.rs  udp_device.rs
smart-home_web/: Cargo.toml
smart-home_web/src/: lib.rs
src/: house.rs  lib.rs  report_provider.rs  room.rs
src/devices/: mod.rs  smart_socket.rs  thermometer.rs
