[package]
name = "smart-home_web"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.1"
smart_home = { path = "../smart-home" }
axum = { version = "0.8.1", features = ["macros", "json"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.12.12", features = ["json"] }

[[bin]]
name = "smart-home-web"
path = "src/bin/server.rs"

[[bin]]
name = "smart-home-web-client"
path = "src/bin/client.rs"

